--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Site de Boxe</title>
     <link rel="stylesheet" href="./fonts/LiberationSans-Bold-webfont.ttf">
     <link rel="stylesheet" href="./fonts/LiberationSans-Regular-webfont.ttf">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./sass/style.scss">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 </head>
@@ -42,55 +43,55 @@
     </div>
     </header>
 
-    <body>
-      <div class="container">
-        <div class="row"><img src="" alt=""></div>
-        <div class="row">
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
-        </div>
-      </div>
-    </body>
 
-    <!-- <footer>
+    
+    <div class="baniere">
+      <div class="col1">Qui sommes-nous</div>
+      <div class="col2"></div>
+      <div class="col1">Contact</div>
+      <div class="col2"></div>
+      <div class="col1">Assistance</div>
+      <div class="col2"></div>
+      <div class="col1">CGV</div>
+    </div>
+    <footer class="footer">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div><img src="./images/icon-livre.png" alt=""></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste 
-              natus temporibus voluptas, quis ipsa minima totam
-            </p>
+          <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div><img src="./images/icon-livre.png" alt=""></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste 
+                natus temporibus voluptas, quis ipsa minima totam
+              </p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div><img src="./images/icon-camion.png" alt=""></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste 
+                natus temporibus voluptas, quis ipsa minima totam
+              </p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div><img src="./images/icon-cadenat.png" alt=""></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste  
+                natus temporibus voluptas, quis ipsa minima totam
+              </p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div><img src="./images/icon-pouce.png" alt=""></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste 
+                natus temporibus voluptas, quis ipsa minima totam
+              </p>
+            </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div><img src="./images/icon-camion.png" alt=""></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste 
-              natus temporibus voluptas, quis ipsa minima totam
-            </p>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div><img src="./images/icon-cadenat.png" alt=""></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste  
-              natus temporibus voluptas, quis ipsa minima totam
-            </p>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div><img src="./images/icon-pouce.png" alt=""></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste 
-              natus temporibus voluptas, quis ipsa minima totam
-            </p>
+          <hr>
+          <div class="icons">
+            <a href="#"><img src="./images/icon-facebook.png" alt="facebook"></a>
+            <a href="#"><img src="./images/icon-twitter.png" alt="twitter"></a>
+            <a href="#"><img src="./images/icon-linkedin.png" alt="linkedin"></a>
           </div>
         </div>
-        <hr>
-        <div class="icons">
-          <a href="#"><img src="./images/icon-facebook.png" alt="facebook"></a>
-          <a href="#"><img src="./images/icon-twitter.png" alt="twitter"></a>
-          <a href="#"><img src="./images/icon-linkedin.png" alt="linkedin"></a>
-        </div>
-      </div>
-      <p>&copy; 2013 sport privilege, Tous droits réservés.</p>
-    </footer> -->
+        <p>&copy; 2013 sport privilege, Tous droits réservés.</p>
+    
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
