--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Site de Boxe</title>
-    <link rel="stylesheet" href="./fonts/LiberationSans-Bold-webfont.ttf">
-    <link rel="stylesheet" href="./fonts/LiberationSans-Regular-webfont.ttf">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./sass/style.scss">
+    <link rel="stylesheet" href="./assets/fonts/LiberationSans-Bold-webfont.ttf">
+    <link rel="stylesheet" href="./assets/fonts/LiberationSans-Regular-webfont.ttf">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/sass/style.scss">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 </head>
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
               <div class="col-lg-12 col-md-12 p-2">
-                <a href="index.html" id="logo"><img src="./images/logo.png" width="140" height="30" alt="logo"></a>
+                <a href="index.html" id="logo"><img src="./assets/images/logo.png" width="140" height="30" alt="logo"></a>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 p-2 parag0">
                 <p id="parag-0">Lorem ipsum dolor <span>sit amet.</span>
@@ -43,8 +43,88 @@
     </div>
     </header>
 
+    <div class="container text-center">
+        <section>
+            <div class="row">
+                <div class="col-6">
+                    <div>- 45%</div>
+                    <div><img src="./assets/images/gant-boxe-2.png" alt="" srcset=""></div>
+                    <div><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <button>
+                                voir la vente
+                            </button>
+                        </div>
+                        <div class="col-4">
+                            <s>120 €</s>
+                        </div>
+                        <div class="col-4">
+                            <p>65 €</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div>- 45%</div>
+                    <div><img src="./assets/images/gant-boxe-1.png" alt="" srcset=""></div>
+                    <div><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <button>
+                                voir la vente
+                            </button>
+                        </div>
+                        <div class="col-4">
+                            <s>120 €</s>
+                        </div>
+                        <div class="col-4">
+                            <p>65 €</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    
+        <section>
+            <div class="row">
+                <div class="col-6">
+                    <div>- 45%</div>
+                    <div><img src="./assets/images/gant-boxe-2.png" alt="" srcset=""></div>
+                    <div><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <button>
+                                voir la vente
+                            </button>
+                        </div>
+                        <div class="col-4">
+                            <s>120 €</s>
+                        </div>
+                        <div class="col-4">
+                            <p>65 €</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div>- 45%</div>
+                    <div><img src="./assets/images/gant-boxe-1.png" alt="" srcset=""></div>
+                    <div><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
+                    <div class="row">
+                        <div class="col-4">
+                            <button>
+                                voir la vente
+                            </button>
+                        </div>
+                        <div class="col-4">
+                            <s>120 €</s>
+                        </div>
+                        <div class="col-4">
+                            <p>65 €</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     <div class="baniere">
       <div class="col1">Qui sommes-nous</div>
       <div class="col2"></div>
@@ -54,29 +134,30 @@
       <div class="col2"></div>
       <div class="col1">CGV</div>
     </div>
-    <footer class="footer">
+</div>
+ <footer class="footer">
       <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6">
-              <div><img src="./images/icon-livre.png" alt=""></div>
+              <div><img src="./assets/images/icon-livre.png" alt=""></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste 
                 natus temporibus voluptas, quis ipsa minima totam
               </p>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
-              <div><img src="./images/icon-camion.png" alt=""></div>
+              <div><img src="./assets/images/icon-camion.png" alt=""></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste 
                 natus temporibus voluptas, quis ipsa minima totam
               </p>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
-              <div><img src="./images/icon-cadenat.png" alt=""></div>
+              <div><img src="./assets/images/icon-cadenat.png" alt=""></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste  
                 natus temporibus voluptas, quis ipsa minima totam
               </p>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
-              <div><img src="./images/icon-pouce.png" alt=""></div>
+              <div><img src="./assets/images/icon-pouce.png" alt=""></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste 
                 natus temporibus voluptas, quis ipsa minima totam
               </p>
@@ -84,9 +165,9 @@
           </div>
           <hr>
           <div class="icons">
-            <a href="#"><img src="./images/icon-facebook.png" alt="facebook"></a>
-            <a href="#"><img src="./images/icon-twitter.png" alt="twitter"></a>
-            <a href="#"><img src="./images/icon-linkedin.png" alt="linkedin"></a>
+            <a href="#"><img src="./assets/images/icon-facebook.png" alt="facebook"></a>
+            <a href="#"><img src="./assets/images/icon-twitter.png" alt="twitter"></a>
+            <a href="#"><img src="./assets/images/icon-linkedin.png" alt="linkedin"></a>
           </div>
         </div>
         <p>&copy; 2013 sport privilege, Tous droits réservés.</p>
