modification col gants

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Site de Boxe</title>
     <link rel="stylesheet" href="./assets/fonts/LiberationSans-Bold-webfont.ttf">
     <link rel="stylesheet" href="./assets/fonts/LiberationSans-Regular-webfont.ttf">
+    <link rel="stylesheet" href="./assets/sass/style.css">
     <link rel="stylesheet" href="./assets/sass/style.scss">
-    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/bootsrap.min.css">
 
 </head>
@@ -45,17 +45,16 @@
     </div>
     </header>
     <main>
-        <div class="container bg__white">
+        <div class="container text-center bg__white">
             <div class="row">
-                <div class="col">
-                    <img src="./assets/images/header-page-catalogue.png" alt="">
+                <div class="col-lg col-md col-sm">
+                    <img class="img-fluid"src="./assets/images/header-page-catalogue.png" alt="">
                 </div>
             </div>
-            <div class="container text-center ">
             <section class="first">
                 <div class="row">
-                    <div class="col-6 pourc__corner">
-                        <div class="pourcentage">- 45%</div>
+                    <div class="col-lg-6 col-md-3 col-sm-3">
+                        <div class=""> - 45%</div>
                         <div>
                             <img src="./assets/images/gant-boxe-2.png" alt="" srcset="">
                         </div>
@@ -72,7 +71,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-3 col-sm-3">
                         <div>- 45%</div>
                         <div><img src="./assets/images/gant-boxe-1.png" alt="" srcset=""></div>
                         <div><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
@@ -93,12 +92,12 @@
     
             <section>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-3 col-sm-3">
                         <div>
                             - 45%
                         </div>
-                        <div><img src="./assets/images/gant-boxe-2.png" alt="" srcset=""></div>
-                        <div><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
+                        <div><img src="./assets/images/gant-boxe-2.png" alt="" srcset="">
+                          <p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
                         <div class="row">
                             <div class="col-4">
                                 <button>
@@ -111,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-3 col-sm-3">
                         <div>
                             - 45%
                         </div>
