modification text gants

--- a/index.html
+++ b/index.html
@@ -51,39 +51,39 @@
                     <img class="img-fluid"src="./assets/images/header-page-catalogue.png" alt="">
                 </div>
             </div>
-            <section class="first">
+            <section>
                 <div class="row">
                     <div class="col-lg-6 col-md-3 col-sm-3">
-                        <div class=""> - 45%</div>
+                        <div class="pourcentage"> - 45%</div>
                         <div>
                             <img src="./assets/images/gant-boxe-2.png" alt="" srcset="">
                         </div>
-                        <div><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
-                        <div class="row">
-                            <div class="col-4">
+                        <div class="text"><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
+                        <div class="row ">
+                            <div class="col-6">
                                 <button>
                                     voir la vente
                                 </button>
                             </div>
-                            <div class="col-4">
-                                <s>120 €</s>
-                                <p>65 €</p>
+                            <div class="col-6 flex">
+                                <s>120 € </s>
+                                <p> 65 €</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-3 col-sm-3">
-                        <div>- 45%</div>
+                      <div class="pourcentage"> - 45%</div>
                         <div><img src="./assets/images/gant-boxe-1.png" alt="" srcset=""></div>
-                        <div><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
+                        <div class="text"><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <button>
                                     voir la vente
                                 </button>
                             </div>
-                            <div class="col-4">
-                                <s>120 €</s>
-                                <p>65 €</p>
+                            <div class="col-6 flex">
+                                <s>120 € </s>
+                                <p> 65 €</p>
                             </div>
                         </div>
                     </div>
@@ -93,42 +93,38 @@
             <section>
                 <div class="row">
                     <div class="col-lg-6 col-md-3 col-sm-3">
-                        <div>
-                            - 45%
-                        </div>
-                        <div><img src="./assets/images/gant-boxe-2.png" alt="" srcset="">
-                          <p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
+                      <div class="pourcentage"> - 45%</div>
+                        <div><img src="./assets/images/gant-boxe-2.png" alt="" srcset=""></div>
+                        <div class="text"><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <button>
                                     voir la vente
                                 </button>
                             </div>
-                            <div class="col-4">
-                                <s>120 €</s>
-                                <p>65 €</p>
+                            <div class="col-6 flex">
+                                <s>120 € </s>
+                                <p> 65 €</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-3 col-sm-3">
-                        <div>
-                            - 45%
-                        </div>
+                      <div class="pourcentage"> - 45%</div>
                         <div>
                             <img src="./assets/images/gant-boxe-1.png" alt="" srcset="">
                         </div>
-                        <div>
+                        <div class="text">
                             <p>GANTS DE BOXE COMBAT KLIMAX V3</p>
                         </div>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-6">
                                 <button>
                                     voir la vente
                                 </button>
                             </div>
-                            <div class="col-4">
-                                <s>120 €</s>
-                                <p>65 €</p>
+                            <div class="col-6 flex">
+                                <s>120 € </s>
+                                <p> 65 €</p>
                             </div>
                         </div>
                     </div>
