--- a/index.html
+++ b/index.html
@@ -59,24 +59,25 @@
                             <img src="./assets/images/gant-boxe-2.png" alt="" srcset="">
                         </div>
                         <div class="text"><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
-                        <div class="row ">
-                            <div class="col-6">
-                                <button>
-                                    voir la vente
-                                </button>
-                            </div>
-                            <div class="col-6 flex">
-                                <s>120 € </s>
-                                <p> 65 €</p>
-                            </div>
-                        </div>
+                        <div class="row top ">
+                          <div class="col-6 text-end">
+                              <button>
+                                  voir la vente
+                              </button>
+                          </div>
+                          <div class="col-6 flex">
+                              <s>120 € </s>
+                              <p> 65 €</p>
+                          </div>
+                      </div>
                     </div>
+
                     <div class="col-lg-6 col-md-3 col-sm-3">
                       <div class="pourcentage"> - 45%</div>
                         <div><img src="./assets/images/gant-boxe-1.png" alt="" srcset=""></div>
                         <div class="text"><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
-                        <div class="row">
-                            <div class="col-6">
+                        <div class="row top ">
+                            <div class="col-6 text-end">
                                 <button>
                                     voir la vente
                                 </button>
@@ -97,7 +98,7 @@
                         <div><img src="./assets/images/gant-boxe-2.png" alt="" srcset=""></div>
                         <div class="text"><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-6 text-end">
                                 <button>
                                     voir la vente
                                 </button>
@@ -117,7 +118,7 @@
                             <p>GANTS DE BOXE COMBAT KLIMAX V3</p>
                         </div>
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-6 text-end">
                                 <button>
                                     voir la vente
                                 </button>
