modificatifications taille banière et col

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     <main>
         <div class="container text-center bg__white">
             <div class="row">
-                <div class="col-lg col-md col-sm">
+                <div class="col-lg-12 col-md-12 col-sm-6">
                     <img class="img-fluid"src="./assets/images/header-page-catalogue.png" alt="">
                 </div>
             </div>
             <section>
                 <div class="row">
-                    <div class="col-lg-6 col-md-3 col-sm-3">
+                    <div class="col-lg-6 col-md-6 col-sm-3">
                         <div class="pourcentage"> - 45%</div>
                         <div>
-                            <img src="./assets/images/gant-boxe-2.png" alt="" srcset="">
+                            <img class="img-fluid" src="./assets/images/gant-boxe-2.png" alt="" srcset="">
                         </div>
                         <div class="text"><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
-                        <div class="row top ">
+                        <div class="row top">
                           <div class="col-6 text-end">
                               <button>
                                   voir la vente
@@ -72,11 +72,11 @@
                       </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-3 col-sm-3">
+                    <div class="col-lg-6 col-md-6 col-sm-3">
                       <div class="pourcentage"> - 45%</div>
-                        <div><img src="./assets/images/gant-boxe-1.png" alt="" srcset=""></div>
+                        <div><img class="img-fluid" src="./assets/images/gant-boxe-1.png" alt="" srcset=""></div>
                         <div class="text"><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
-                        <div class="row top ">
+                        <div class="row top">
                             <div class="col-6 text-end">
                                 <button>
                                     voir la vente
@@ -93,9 +93,9 @@
     
             <section>
                 <div class="row">
-                    <div class="col-lg-6 col-md-3 col-sm-3">
+                    <div class="col-lg-6 col-md-6 col-sm-3">
                       <div class="pourcentage"> - 45%</div>
-                        <div><img src="./assets/images/gant-boxe-2.png" alt="" srcset=""></div>
+                        <div><img class="img-fluid" src="./assets/images/gant-boxe-2.png" alt="" srcset=""></div>
                         <div class="text"><p>GANTS DE BOXE COMBAT KLIMAX V3</p></div>
                         <div class="row">
                             <div class="col-6 text-end">
@@ -109,10 +109,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-3 col-sm-3">
+                    <div class="col-lg-6 col-md-6 col-sm-3">
                       <div class="pourcentage"> - 45%</div>
                         <div>
-                            <img src="./assets/images/gant-boxe-1.png" alt="" srcset="">
+                            <img class="img-fluid" src="./assets/images/gant-boxe-1.png" alt="" srcset="">
                         </div>
                         <div class="text">
                             <p>GANTS DE BOXE COMBAT KLIMAX V3</p>
